# final_medical_ai_agent

./: .env.example  .gitignore  20251223_중간 정리.txt  20251223_피드백 기반 설계 전략.txt  251216_ENHANCEMENT_COMPLETE.md  251216_feedback_reaction1.md  251216_multiturn_upgrade_v0.md  251223_yaml_rebuild.md  251225_3metrics_twins.md  ABLATION_COMPONENTS_CHECKLIST.md  ENHANCEMENT_IMPLEMENTATION_SUMMARY.md  ENTITY_AB_INTEGRATION_STRATEGY.md  ENTITY_AB_MERGE_SUMMARY.md  HELSINKI_NLP_TRANSLATION_SETUP.md  IMPLEMENTATION_EXAMPLES.md  MEDCAT_INTEGRATION_COMPLETE.md  MEDCAT_SETUP_GUIDE.md  MODULAR_RAG_STRATEGY_AND_ARCHITECTURE_ANALYSIS.md  MULTITURN_IMPLEMENTATION_SUMMARY.md  PERSONALIZED_RAG_ENHANCEMENT_GUIDE.md  QUICK_START_CHECKLIST.md  RAGAS_EVALUATION_COMPLETE.md  RAGAS_EVALUATION_IMPROVEMENT_GUIDE.md  RAGAS_IMPLEMENTATION_VERIFICATION.md  RAGAS_INTEGRATION_COMPLETE.md  RAGAS_SETUP_AND_CONFLICT_CHECK.md  README.md  README_PATCH.txt  REDESIGN_DOCUMENTATION_INDEX.md  REDESIGN_QUICK_START.md  TRANSLATION_MODEL_INTEGRATION_COMPLETE.md  ZERO_TO_ONE_REDESIGN_STRATEGY.md  env_template.txt  korean_translator.py  out1.json  pyproject.toml  requirements.txt  run_enhancement_experiments.bat  run_enhancement_experiments.sh
.claude/: settings.local.json
agent/: __init__.py  entrypoint.py  graph.py  quality_evaluator.py  query_rewriter.py
cli/: evaluate_from_gold.py  run_batch_compare.py  run_compare.py  train_kmbert_kbmc_ner.py
config/: ablation_config.py
configs/: aihub_71874_paths.yaml  aihub_retrieval_runtime.yaml  default.yaml  eval_rubric.yaml  question_templates.yaml
(+115 files in other folders)
